# Local-RAG-Codebase-Assistant

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
eval/: dataset.jsonl  metrics.py  run_eval.py  runner.py
src/rag_assistant/: config.py
src/rag_assistant/api/: app.py  dependencies.py  middleware.py
src/rag_assistant/api/routers/: admin.py  query.py
src/rag_assistant/cache/: redis_cache.py
src/rag_assistant/embedding/: __init__.py  embedder.py
src/rag_assistant/generation/: citation_parser.py  llm.py  prompt.py
src/rag_assistant/ingestion/: ast_chunker.py  chunker.py  cloner.py  pipeline.py  sliding_chunker.py  tracker.py  walker.py
src/rag_assistant/jobs/: job_store.py
src/rag_assistant/models/: __init__.py  api.py  chunk.py  search.py
src/rag_assistant/retrieval/: __init__.py  reranker.py  retriever.py  vector_store.py
tests/: conftest.py
tests/unit/: test_ast_chunker.py  test_chunker.py  test_citation_parser.py  test_cloner_walker.py  test_embedder.py  test_job_store.py  test_llm.py  test_metrics.py  test_models.py  test_pipeline.py  test_prompt_builder.py  test_retrieval.py  test_sliding_chunker.py  test_tracker.py  test_two_level_cache.py
