[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-assistant"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    # API
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sse-starlette==2.1.3",

    # Config
    "pydantic==2.11.7",
    "pydantic-settings==2.7.0",
    "python-dotenv==1.0.1",

    # Vector store
    "qdrant-client==1.12.1",

    # Embeddings & reranking
    "sentence-transformers==3.3.1",
    "torch==2.7.1",
    "transformers==4.47.1",
    "huggingface-hub==0.27.0",

    # LLM
    "ollama==0.6.1",

    # Caching
    "redis[hiredis]==5.2.1",

    # Chunking & tokenization
    "tiktoken==0.8.0",
    "tree-sitter==0.23.2",
    "tree-sitter-python==0.23.4",
    "tree-sitter-javascript==0.23.1",
    "tree-sitter-typescript==0.23.2",
    "tree-sitter-go==0.23.1",
    "tree-sitter-rust==0.23.2",

    # Ingestion utilities
    "gitpython==3.1.43",

    # Evaluation
    "datasets==3.2.0",
    "numpy==2.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "ruff==0.9.1",
    "mypy==1.14.0",
    "types-redis==4.6.0.20241004",
    "fakeredis==2.34.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rag_assistant"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing -v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
"eval/**" = ["E501"]

[tool.mypy]
strict = true
ignore_missing_imports = true
